<resources>
    <string name="app_name">LiveUnite</string>
    <string name="picture_taken">Picture taken</string>
    <string name="preview_textbox_hint_image">Enter a caption for the photo</string>
    <string name="preview_textbox_hint_video">Enter a caption for the video</string>
    <string name="facebook_app_id">1318653758166666</string>
    <string name="fb_login_protocol_scheme">fb1318653758166666</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="google_maps_id">AIzaSyCIiauWQdMS4Sc8OYunjMVzsbgdW0Bjxg0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="action_settings">Settings</string>
    <string name="action_popup">Popup settings</string>
    <string name="intro_text">Touch to focus, and press the blue camera button to take photos.</string>
    <string name="intro_ok">OK (This message won\'t show again)</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="choose_save_location">Choose save location:</string>
    <string name="clear_folder_history">Clear folder history</string>
    <string name="clear_folder_history_question">Clear folder history?</string>
    <string name="choose_another_folder">Choose another folder</string>
    <string name="changed_save_location">Changed save location to:</string>
    <string name="stopped_recording_video">Stopped recording video</string>
    <string name="repeats_to_go">repeats to go</string>
    <string name="failed_to_reconnect_camera">Failed to reconnect to camera</string>
    <string name="video_may_be_corrupted">Error, video file may be corrupted</string>
    <string name="not_supported">not supported on your device</string>
    <string name="video_error_unknown">Unknown error, video halted</string>
    <string name="video_error_server_died">Server died, video halted</string>
    <string name="video_max_duration">Video reached max duration</string>
    <string name="video_max_filesize">Video reached max file size</string>
    <string name="exposure_compensation">Exposure compensation</string>
    <string name="fps">FPS</string>
    <string name="focus_distance">Focus distance</string>
    <string name="infinite">Infinite</string>
    <string name="front_camera">Front Camera</string>
    <string name="back_camera">Back Camera</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="exposure_locked">Exposure Locked</string>
    <string name="exposure_unlocked">Exposure unlocked</string>
    <string name="cancelled_timer">Cancelled timer</string>
    <string name="cancelled_burst_mode">Cancelled burst mode</string>
    <string name="started_timer">Started timer</string>
    <string name="failed_to_save_video">Failed to save video file</string>
    <string name="failed_to_record_video">Failed to record video</string>
    <string name="started_recording_video">Started recording video</string>
    <string name="sorry">Sorry</string>
    <string name="failed_to_save_photo">Failed to save photo</string>
    <string name="failed_to_save_photo_raw">Failed to save RAW photo</string>
    <string name="failed_to_auto_stabilise">Failed to auto-stabilise</string>
    <string name="failed_to_start_camera_preview">Failed to start camera preview</string>
    <string name="taking_photo">Taking photo</string>
    <string name="failed_to_take_picture">Failed to take picture</string>
    <string name="location_not_available">GPS location not available</string>
    <string name="photo_deleted">Photo deleted</string>
    <string name="no_gallery_app">No gallery app available</string>
    <string name="screen_is_locked">Screen is locked\nswipe the screen to unlock</string>
    <string name="unlocked">Unlocked</string>
    <string name="auto_stabilise_not_supported">Sorry, auto-stabilise not supported\non this device</string>
    <string name="audio_disabled">Audio disabled</string>
    <string name="max_duration">Max duration</string>
    <string name="zoom">Zoom</string>
    <string name="preference_face_detection">Face detection</string>
    <string name="preference_face_detection_summary">Use face detection instead of focus areas</string>
    <string name="preference_category_camera_controls">Camera Controls</string>
    <string name="preference_screen_camera_controls_more">More camera controls…</string>
    <string name="preference_pause_preview">Pause after taking photo</string>
    <string name="preference_pause_preview_summary">Pause the screen after taking a photo, with the option to share or delete the photo</string>
    <string name="preference_shutter_sound">Shutter sound</string>
    <string name="preference_shutter_sound_summary">Play a sound when taking a photo</string>
    <string name="preference_volume_keys">Volume keys</string>
    <string name="preference_volume_keys_summary">Set behaviour for when volume keys are pressed</string>
    <string name="preference_save_photo_prefix">Save photo prefix</string>
    <string name="preference_save_photo_prefix_summary">The prefix to use for the save filenames for photos</string>
    <string name="preference_save_video_prefix">Save video prefix</string>
    <string name="preference_save_video_prefix_summary">The prefix to use for the save filenames for videos</string>
    <string name="preference_save_zulu_time">Time format for filename</string>
    <string name="preference_save_zulu_time_summary">Whether to use local or UTC (Coordinated Universal Time) time for naming photos and videos</string>
    <string name="preference_show_when_locked">Show camera when locked</string>
    <string name="preference_show_when_locked_summary">If enabled, Open Camera will still show above any lockscreen (you\'ll still have to unlock to access Settings, Gallery etc)</string>
    <string name="preference_startup_focus">Perform auto-focus on startup</string>
    <string name="preference_startup_focus_summary">Whether to auto-focus when Open Camera is started. If you have the problem of flash turning on when starting, disable this option</string>
    <string name="preference_rotate_preview">Rotate preview</string>
    <string name="preference_rotate_preview_summary">Option to rotate the preview (won\'t affect resultant photos/videos)</string>
    <string name="preference_screen_gui">On screen GUI…</string>
    <string name="preference_preview_size">Preview size</string>
    <string name="preference_preview_size_summary">How to choose the preview size</string>
    <string name="preference_ui_placement">UI placement</string>
    <string name="preference_ui_placement_summary">Whether to have a left-handed or right-handed user interface</string>
    <string name="preference_immersive_mode">Immersive mode</string>
    <string name="preference_immersive_mode_summary">Options for \"immersive mode\" behaviour</string>
    <string name="preference_show_iso">Show ISO</string>
    <string name="preference_show_iso_summary">Display the current ISO level (requires Camera2 API)</string>
    <string name="preference_crop_guide">Show a crop guide</string>
    <string name="preference_crop_guide_summary">A crop guide displays a rectangle showing what the specified aspect ratio looks like - useful if you plan to crop the photo/video afterwards to a different aspect ratio. Requires WYSIWYG photo mode, or being in video mode.</string>
    <string name="preference_show_toasts">Show \"toast\" messages</string>
    <string name="preference_show_toasts_summary">Whether to display the popup \"toast\" messages</string>
    <string name="preference_thumbnail_animation">Show thumbnail animation</string>
    <string name="preference_thumbnail_animation_summary">Display moving thumbnail animation when taking a photo</string>
    <string name="preference_take_photo_border">Show border when taking photo</string>
    <string name="preference_take_photo_border_summary">Display a border on the display to indicate taking a photo</string>
    <string name="preference_keep_display_on">Keep display on</string>
    <string name="preference_keep_display_on_summary">If enabled, the screen won\'t switch off while the main Open Camera UI is active</string>
    <string name="preference_max_brightness">Force maximum brightness</string>
    <string name="preference_max_brightness_summary">Force screen display to be at maximum brightness, rather than device default</string>
    <string name="preference_category_camera_quality">Photo and Video Settings</string>
    <string name="preference_screen_photo_settings">Photo settings…</string>
    <string name="preference_screen_video_settings">Video settings…</string>
    <string name="preference_resolution">Camera resolution</string>
    <string name="preference_resolution_summary">Set the resolution of photos taken by the camera</string>
    <string name="preference_quality">Image quality</string>
    <string name="preference_quality_summary">Set the image JPEG quality of saved photo images (recommended value is 90%%)</string>
    <string name="preference_raw">RAW</string>
    <string name="preference_raw_summary">Whether to save in RAW (DNG) format</string>
    <string name="video_quality">Video resolution</string>
    <string name="video_quality_summary">Set the resolution of videos</string>
    <string name="preference_video_stabilization">Enable video stabilization</string>
    <string name="preference_video_stabilization_summary">Video stabilization reduces the shaking due to the motion of the camera in both the preview and in recorded videos</string>
    <string name="preference_video_bitrate">Video bitrate (approx)</string>
    <string name="preference_video_bitrate_summary">Set the approximate bitrate of videos (higher means better quality, but takes up more disk space; may cause video recording to fail if bitrate not supported)</string>
    <string name="preference_video_fps">Video frame rate (approx)</string>
    <string name="preference_video_fps_summary">Set the frame rate (FPS) of videos (may be approx, not guaranteed to be achieved, and may cause video recording to fail if frame rate not supported)</string>
    <string name="preference_video_max_duration">Maximum duration of video</string>
    <string name="preference_video_max_duration_summary">The video recording will stop after the specified duration</string>
    <string name="preference_video_max_filesize">Maximum file size of video</string>
    <string name="preference_video_max_filesize_summary">The video recording will stop and/or restart (see option below) when the (approximate) maximum file size is reached. Note that almost all Android devices have a maximum file size for videos (typically around 2GB or 4GB), but this option allows setting a specific value</string>
    <string name="take_photo">Take Photo</string>
    <string name="switch_to_front_camera">Switch to front camera</string>
    <string name="switch_to_video">Switch to video mode</string>
    <string name="preference_category_photo_debugging">Debugging options</string>
    <string name="preference_camera2_fake_flash">Use alternative flash method</string>
    <string name="preference_camera2_fake_flash_summary">Enable this if your device has buggy flash behaviour with Camera2 API</string>
    <string name="preference_expo_bracketing_n_images">Exposure Bracketing</string>
    <string name="preference_expo_bracketing_n_images_summary">Number of images for exposure bracketing mode</string>
    <string name="preference_expo_bracketing_stops">Exposure Bracketing Stops</string>
    <string name="preference_expo_bracketing_stops_summary">Number of stops for each image</string>
</resources>