<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<PreferenceCategory
        android:key="preference_category_camera_effects"
        android:title="@string/preference_category_camera_effects"
        >
        -->

    <!--  if we move this to another PreferenceGroup, we should update code for the readFromIntent() call -->
    <!--
    <ListPreference
        android:key="preference_color_effect"
        android:title="@string/preference_color_effect"
        android:summary="@string/preference_color_effect_summary"
        />
    -->

    <!--  if we move this to another PreferenceGroup, we should update code for the readFromIntent() call -->
    <!--
    <ListPreference
        android:key="preference_scene_mode"
        android:title="@string/preference_scene_mode"
        android:summary="@string/preference_scene_mode_summary"
        />
    -->

    <!--  if we move this to another PreferenceGroup, we should update code for the readFromIntent() call -->
    <!--
    <ListPreference
        android:key="preference_white_balance"
        android:title="@string/preference_white_balance"
        android:summary="@string/preference_white_balance_summary"
        />
    -->

    <!--  if we move this to another PreferenceGroup, we should update code for the readFromIntent() call -->
    <!--
    <ListPreference
        android:key="preference_iso"
        android:title="@string/preference_iso"
        android:summary="@string/preference_iso_summary"
        />
    -->

    <!--  if we move this to another PreferenceGroup, we should update code for the readFromIntent() call -->
    <!--
       <ListPreference
        android:key="preference_exposure"
        android:title="@string/preference_exposure"
        android:summary="@string/preference_exposure_summary"
        />
    -->

    <!--  if we move this to another PreferenceGroup, we should update code for the findPreference() call -->
    <!--
    <SwitchPreference
        android:key="preference_auto_stabilise"
        android:title="@string/preference_auto_stabilise"
        android:summary="@string/preference_auto_stabilise_summary"
        android:defaultValue="false"
        />
    -->

    <!-- </PreferenceCategory> -->

    <PreferenceCategory
        android:key="preference_category_camera_controls"
        android:title="@string/preference_category_camera_controls">

        <!--  if we move this to another PreferenceGroup, we should update code for the findPreference() call -->
        <SwitchPreference
            android:defaultValue="true"
            android:key="preference_face_detection"
            android:summary="@string/preference_face_detection_summary"
            android:title="@string/preference_face_detection"
            />

        <PreferenceScreen
            android:icon="@drawable/selfie_small"
            android:key="preference_screen_camera_controls_more"
            android:persistent="false"
            android:title="@string/preference_screen_camera_controls_more">

            <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
            <SwitchPreference
                android:defaultValue="true"
                android:key="preference_shutter_sound"
                android:summary="@string/preference_shutter_sound_summary"
                android:title="@string/preference_shutter_sound"
                />
            <SwitchPreference
                android:defaultValue="true"
                android:key="preference_pause_preview"
                android:summary="@string/preference_pause_preview_summary"
                android:title="@string/preference_pause_preview"
                />

            <ListPreference
                android:defaultValue="volume_take_photo"
                android:entries="@array/preference_volume_keys_entries"
                android:entryValues="@array/preference_volume_keys_values"
                android:key="preference_volume_keys"
                android:summary="@string/preference_volume_keys_summary"
                android:title="@string/preference_volume_keys"
                />

            <EditTextPreference
                android:defaultValue="IMG_"
                android:dialogMessage="@string/preference_save_photo_prefix_summary"
                android:dialogTitle="@string/preference_save_photo_prefix"
                android:inputType="text"
                android:key="preference_save_photo_prefix"
                android:summary="@string/preference_save_photo_prefix_summary"
                android:title="@string/preference_save_photo_prefix"
                />

            <EditTextPreference
                android:defaultValue="VID_"
                android:dialogMessage="@string/preference_save_video_prefix_summary"
                android:dialogTitle="@string/preference_save_video_prefix"
                android:inputType="text"
                android:key="preference_save_video_prefix"
                android:summary="@string/preference_save_video_prefix_summary"
                android:title="@string/preference_save_video_prefix"
                />

            <ListPreference
                android:defaultValue="local"
                android:entries="@array/preference_save_zulu_time_entries"
                android:entryValues="@array/preference_save_zulu_time_values"
                android:key="preference_save_zulu_time"
                android:summary="@string/preference_save_zulu_time_summary"
                android:title="@string/preference_save_zulu_time"
                />

            <SwitchPreference
                android:defaultValue="true"
                android:key="preference_show_when_locked"
                android:summary="@string/preference_show_when_locked_summary"
                android:title="@string/preference_show_when_locked"
                />

            <SwitchPreference
                android:defaultValue="true"
                android:key="preference_startup_focus"
                android:summary="@string/preference_startup_focus_summary"
                android:title="@string/preference_startup_focus"
                />

        </PreferenceScreen>

        <PreferenceScreen
            android:key="preference_screen_gui"
            android:persistent="false"
            android:title="@string/preference_screen_gui">

            <ListPreference
                android:defaultValue="preference_preview_size_wysiwyg"
                android:entries="@array/preference_preview_size_entries"
                android:entryValues="@array/preference_preview_size_values"
                android:key="preference_preview_size"
                android:summary="@string/preference_preview_size_summary"
                android:title="@string/preference_preview_size"
                />

            <ListPreference
                android:defaultValue="ui_right"
                android:entries="@array/preference_ui_placement_entries"
                android:entryValues="@array/preference_ui_placement_values"
                android:key="preference_ui_placement"
                android:summary="@string/preference_ui_placement_summary"
                android:title="@string/preference_ui_placement"
                />

            <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
            <ListPreference
                android:defaultValue="immersive_mode_low_profile"
                android:entries="@array/preference_immersive_mode_entries"
                android:entryValues="@array/preference_immersive_mode_values"
                android:key="preference_immersive_mode"
                android:summary="@string/preference_immersive_mode_summary"
                android:title="@string/preference_immersive_mode"
                />

            <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="preference_show_iso"
                android:summary="@string/preference_show_iso_summary"
                android:title="@string/preference_show_iso"
                />

            <ListPreference
                android:defaultValue="crop_guide_none"
                android:entries="@array/preference_crop_guide_entries"
                android:entryValues="@array/preference_crop_guide_values"
                android:key="preference_crop_guide"
                android:summary="@string/preference_crop_guide_summary"
                android:title="@string/preference_crop_guide"
                />

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="preference_show_toasts"
                android:summary="@string/preference_show_toasts_summary"
                android:title="@string/preference_show_toasts"
                />

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="preference_thumbnail_animation"
                android:summary="@string/preference_thumbnail_animation_summary"
                android:title="@string/preference_thumbnail_animation"
                />

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="preference_take_photo_border"
                android:summary="@string/preference_take_photo_border_summary"
                android:title="@string/preference_take_photo_border"
                />

            <SwitchPreference
                android:defaultValue="true"
                android:key="preference_keep_display_on"
                android:summary="@string/preference_keep_display_on_summary"
                android:title="@string/preference_keep_display_on"
                />

            <SwitchPreference
                android:defaultValue="true"
                android:key="preference_max_brightness"
                android:summary="@string/preference_max_brightness_summary"
                android:title="@string/preference_max_brightness"
                />

            <ListPreference
                android:defaultValue="0"
                android:entries="@array/preference_rotate_preview_entries"
                android:entryValues="@array/preference_rotate_preview_values"
                android:key="preference_rotate_preview"
                android:summary="@string/preference_rotate_preview_summary"
                android:title="@string/preference_rotate_preview"
                />

        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="preference_category_camera_quality"
        android:title="@string/preference_category_camera_quality">

        <PreferenceScreen
            android:key="preference_screen_photo_settings"
            android:persistent="false"
            android:title="@string/preference_screen_photo_settings">

            <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
            <ListPreference
                android:key="preference_resolution"
                android:summary="@string/preference_resolution_summary"
                android:title="@string/preference_resolution"
                />

            <ListPreference
                android:defaultValue="90"
                android:key="preference_quality"
                android:summary="@string/preference_quality_summary"
                android:title="@string/preference_quality"
                />

            <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
            <ListPreference
                android:defaultValue="preference_raw_no"
                android:entries="@array/preference_raw_entries"
                android:entryValues="@array/preference_raw_values"
                android:key="preference_raw"
                android:summary="@string/preference_raw_summary"
                android:title="@string/preference_raw"
                />

            <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
            <ListPreference
                android:defaultValue="3"
                android:entries="@array/preference_expo_bracketing_n_images_entries"
                android:entryValues="@array/preference_expo_bracketing_n_images_values"
                android:key="preference_expo_bracketing_n_images"
                android:summary="@string/preference_expo_bracketing_n_images_summary"
                android:title="@string/preference_expo_bracketing_n_images"
                />

            <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
            <ListPreference
                android:defaultValue="2"
                android:entries="@array/preference_expo_bracketing_stops_entries"
                android:entryValues="@array/preference_expo_bracketing_stops_values"
                android:key="preference_expo_bracketing_stops"
                android:summary="@string/preference_expo_bracketing_stops_summary"
                android:title="@string/preference_expo_bracketing_stops"
                />

            <PreferenceCategory
                android:key="preference_category_photo_debugging"
                android:title="@string/preference_category_photo_debugging"
                >

                <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
                <SwitchPreference
                    android:defaultValue="false"
                    android:key="preference_camera2_fake_flash"
                    android:summary="@string/preference_camera2_fake_flash_summary"
                    android:title="@string/preference_camera2_fake_flash"
                    />
            </PreferenceCategory>

        </PreferenceScreen>

        <PreferenceScreen
            android:key="preference_screen_video_settings"
            android:persistent="false"
            android:title="@string/preference_screen_video_settings">

            <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
            <ListPreference
                android:key="preference_video_quality"
                android:summary="@string/video_quality_summary"
                android:title="@string/video_quality"
                />

            <!--  if we move this to another PreferenceGroup, we should update code for the findPreference() call -->
            <SwitchPreference
                android:defaultValue="true"
                android:key="preference_video_stabilization"
                android:summary="@string/preference_video_stabilization_summary"
                android:title="@string/preference_video_stabilization"
                />

            <ListPreference
                android:defaultValue="200000"
                android:entries="@array/preference_video_bitrate_entries"
                android:entryValues="@array/preference_video_bitrate_values"
                android:key="preference_video_bitrate"
                android:summary="@string/preference_video_bitrate_summary"
                android:title="@string/preference_video_bitrate"
                />

            <ListPreference
                android:defaultValue="25"
                android:entries="@array/preference_video_fps_entries"
                android:entryValues="@array/preference_video_fps_values"
                android:key="preference_video_fps"
                android:summary="@string/preference_video_fps_summary"
                android:title="@string/preference_video_fps"
                />

            <ListPreference
                android:defaultValue="120"
                android:entries="@array/preference_video_max_duration_entries"
                android:entryValues="@array/preference_video_max_duration_values"
                android:key="preference_video_max_duration"
                android:summary="@string/preference_video_max_duration_summary"
                android:title="@string/preference_video_max_duration"
                />

            <ListPreference
                android:defaultValue="0"
                android:entries="@array/preference_video_max_filesize_entries"
                android:entryValues="@array/preference_video_max_filesize_values"
                android:key="preference_video_max_filesize"
                android:summary="@string/preference_video_max_filesize_summary"
                android:title="@string/preference_video_max_filesize"
                />
        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>
